refactor: change parameters names